apps/playground/base/playground-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
spec:
  selector:
    matchLabels:
      app: playground
      tier: gui
  template:
    metadata:
      labels:
        app: playground
        tier: gui
    spec:
      containers:
        - name: node
          image: quicklookup/playground:0b65e0b
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
      imagePullSecrets:
        - name: dockerlock
