apps/playground/base/playground-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  labels:
    app: playground
    tier: gui
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: playground
    tier: gui
