apps/playground/base/playground-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: playground
    annotations:
        ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - host: playground.contextsuite.com
          http:
              paths:
                  - backend:
                        service:
                            name: playground
                            port:
                                number: 8080
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - playground.contextsuite.com
          secretName: playground-contextsuite-com-tls
